test_case/rust-lang_rust/11804_33314192.rs

//~ ERROR: variadic function must have C calling convention
